added Docker support and expanded sample departments

--- a/INSTA_QUEUE/index.html
+++ b/INSTA_QUEUE/index.html
@@ -16,6 +16,11 @@
       <a class="btn" href="dashboard-student.html">Student Dashboard</a>
       <a class="btn" href="dashboard-admin.html">Admin Dashboard</a>
     </div>
+    <section style="margin-top:18px;">
+      <h3>About InstaQueue</h3>
+      <p>InstaQueue is a lightweight campus queue and appointment management system. Students can register, book appointments with campus departments, and receive a sequential queue number. Admins can view and serve queues, update appointment status, and monitor simple analytics.</p>
+      <p>Core services include Registrar, Finance, ICT Support, Library Services, Health Unit, Student Affairs, Examination Office, and Admissions.</p>
+    </section>
   </main>
   <script src="js/script.js"></script>
 </body>
