updated departments and Docker support

--- a/INSTA_QUEUE/feedback.html
+++ b/INSTA_QUEUE/feedback.html
@@ -5,8 +5,16 @@
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>Feedback - InstaQueue</title>
   <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" integrity="sha512-d8fS2QKq3M4Xq2sC0kVw0zY5OZz1s5QfQ+X0xk3xkP1G9b1Yq5z1+Z3w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
+  <header class="site-header">
+    <div class="container">
+      <a class="logo" href="/">Insta<span style="color:var(--navy)">Queue</span></a>
+      <nav class="nav-links"><a href="/">Home</a><a href="dashboard-student.html">Dashboard</a></nav>
+    </div>
+  </header>
+  <div class="page-wrap">
   <main class="card">
     <h2>Feedback</h2>
     <form id="feedbackForm">
@@ -14,9 +22,10 @@
       <label>Rating</label>
       <select name="rating"><option>5</option><option>4</option><option>3</option><option>2</option><option>1</option></select>
       <textarea name="comment" placeholder="Comments"></textarea>
-      <button type="submit">Send Feedback</button>
+      <button type="submit" class="btn-primary"><i class="fa fa-paper-plane"></i> Send Feedback</button>
     </form>
   </main>
+  </div>
   <script src="js/script.js"></script>
 </body>
 </html>
