--- a/INSTA_QUEUE/dashboard-student.html
+++ b/INSTA_QUEUE/dashboard-student.html
@@ -5,8 +5,16 @@
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>Student Dashboard - InstaQueue</title>
   <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" integrity="sha512-d8fS2QKq3M4Xq2sC0kVw0zY5OZz1s5QfQ+X0xk3xkP1G9b1Yq5z1+Z3w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
+  <header class="site-header">
+    <div class="container">
+      <a class="logo" href="/">Insta<span style="color:var(--navy)">Queue</span></a>
+      <nav class="nav-links"><a href="/">Home</a><a href="feedback.html">Feedback</a></nav>
+    </div>
+  </header>
+  <div class="page-wrap">
   <main class="card">
     <h2>Student Dashboard</h2>
     <div id="userInfo"></div>
@@ -17,7 +25,7 @@
         <input type="date" name="date" required>
         <input type="time" name="time" required>
         <input name="reason" placeholder="Reason">
-        <button type="submit">Book</button>
+        <button type="submit" class="btn-primary"><i class="fa fa-calendar-plus"></i> Book</button>
       </form>
     </section>
     <section>
@@ -25,6 +33,7 @@
       <div id="myAppointments"></div>
     </section>
   </main>
+  </div>
   <script src="js/script.js"></script>
 </body>
 </html>
