--- a/INSTA_QUEUE/register.html
+++ b/INSTA_QUEUE/register.html
@@ -5,8 +5,16 @@
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>Register - InstaQueue</title>
   <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" integrity="sha512-d8fS2QKq3M4Xq2sC0kVw0zY5OZz1s5QfQ+X0xk3xkP1G9b1Yq5z1+Z3w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
+  <header class="site-header">
+    <div class="container">
+      <a class="logo" href="/">Insta<span style="color:var(--navy)">Queue</span></a>
+      <nav class="nav-links"><a href="/">Home</a><a href="login.html">Login</a></nav>
+    </div>
+  </header>
+  <div class="page-wrap">
   <main class="card">
     <h2>Register</h2>
     <form id="registerForm">
@@ -17,11 +25,12 @@
         <option value="student">Student</option>
         <option value="admin">Admin</option>
       </select>
-      <button type="submit">Register</button>
+      <button type="submit"><i class="fa fa-user-plus"></i> Register</button>
     </form>
     <p id="msg"></p>
     <p><a href="login.html">Already have an account? Login</a></p>
   </main>
+  </div>
   <script src="js/script.js"></script>
 </body>
 </html>
