updated phpfile paths for docker setup

--- a/INSTA_QUEUE/index.html
+++ b/INSTA_QUEUE/index.html
@@ -10,7 +10,7 @@
 <body>
   <header class="site-header">
     <div class="container">
-      <a class="logo" href="/">Insta<span style="color:var(--navy)">Queue</span></a>
+      <a class="logo" href="/">InstaQueue<span style="color:var(--navy)"></span></a>
       <nav class="nav-links">
         <a href="register.html">Register</a>
         <a href="login.html">Login</a>
